[tool.poetry]
name = "2019"
version = "0.1.0"
description = "A python library to tumble hashtags"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sanic = "^19.6"
aiosqlite = "^0.10.0"
pytest = "^5.1"
flask = "^1.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
aiohttp = "^3.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
