[tool.poetry]
name = "hashtag_tumbler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jedi_language_server = "^0.21.0"
ipython = "^7.19.0"
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
